--- a/Woops/WebContent/images/css.css
+++ b/Woops/WebContent/images/css.css
@@ -1,82 +1,103 @@
 
 
 body  {
-		font-family:verdana,Helvetica, sans, serif; 
-        font-size: 11px; 
-        color: #645F83;
-		text-decoration: none;
+	font-family:"Trebuchet MS", Trebuchet, Tahoma,Helvetica, sans-serif;
+        font-size: 14px; 
+        color: black;
+	text-decoration: none;
+        margin:0px 0px 0px 0px;
+        padding:0px 0px 0px 0px;
 }
 
 Table {
+	font-family:"Trebuchet MS", Trebuchet, Tahoma,Helvetica, sans-serif;
+        font-size: 14px;
+        margin:0px 0px 0px 0px;
+        padding:0px 0px 0px 0px;
         font-size: 11px; 
 }
 
-
-
-TEXTAREA:hover {
-        background-color:white;
-        color:black;
+Table.Table1 {
+        background: #FFFFFF;
+        border:2px #8B82A2 solid ;
+        
 }
 
-INPUT:hover {
-        background-color:white;
-        color:black;
+Table.Table2 {
+        background: #BEB4CC;
+        border: 0px #FFFFFF solid ; 
+        padding: 4px 4px 4px 4px;
 }
 
-FILE:hover {
-        background-color:white;
-        color:black;
-}
-      
-      
-A{
-        text-decoration: none;
-        color:black;
+Table.Table3 {
+        background: #DAD3E2;
+        border: 0px #FFFFFF solid ;
+        
 }
 
-
-
-TABLE.tableau {
-        border:0px #BEB5CC solid ; 
-        margin: 0px;
-        padding: 0px;
+Table.Table4 {
+        background: #CAC0D6;
+        border: 0px #FFFFFF solid ;
+        
+        
 }
 
-TABLE.tableau tr.entete {
-        background:#BEB5CC;
-        font-weight: bold;
-        cursor: default;
-        padding: 0px;
+Table.Table5 {
+        background: #8B82A2;
+        border: 0px #FFFFFF solid ;
+        
 }
 
-TABLE.tableau tr:hover {
-        background:#D6CFDE;
-        cursor: pointer;
+Table.Table6 {
+        background: #E6E0EB;
+        border: 0px #FFFFFF solid ;
+        
+        
 }
 
-TABLE.tableau td {
-        width:100px;
+Table.Table_spacer {
+        height:3px;
 }
 
-
-DIV.titreMenu {
-        font-size: 12px; text-decoration: none; color:#645F83; font-weight: bold;
-        width:170px;
-}
-
-DIV.rubrique:hover {
-        background:#D6CFDE;
-}
-
-DIV.rubrique {
-		cursor: pointer;
-        width:170px;
-}
-
-DIV.titrePage {
-        font-size: 16px; text-decoration: none; color:#645F83; font-weight: bold;
-
+Table.Table_spacer_top {
+        height:20px;
 }
 
 
+
+
+div{
+margin : 0px 10px 0px 10px;
+}
+
+div.pageTitle{
+
+        font-family: "Trebuchet MS", Trebuchet, Tahoma,Helvetica, sans-serif;
+        font-weight : bold;
+        color : #FFFFFF;
+        font-size: 25px; 
+}
+
+div.identification{
+
+        font-family: "Trebuchet MS", Trebuchet, Tahoma,Helvetica, sans-serif;
+        font-weight : bold;
+        color : #FFFFFF;
+        font-size: 13px; 
+}
+
+div.menu{
+
+        font-family: "Trebuchet MS", Trebuchet, Tahoma,Helvetica, sans-serif;
+        font-weight : bold;
+        color : #8B82A2;
+        font-size: 14px; 
+}
+
+div.contenu{
+        margin : 10px 10px 10px 10px;
+        font-family: "Trebuchet MS", Trebuchet, Tahoma,Helvetica, sans-serif;
+        color : #8B82A2;
+        font-size: 12px; 
+}
 
