--- a/Woops/WebContent/fw/def2/style/menu.css
+++ b/Woops/WebContent/fw/def2/style/menu.css
@@ -132,7 +132,7 @@
 }
 
 .msb .m1 {
-	background-color: #9CB9D0;
+	background-color: #CAC0D6;
 	padding-left: 5px;
 	padding-top: 2px;
 	padding-bottom: 2px;
@@ -144,7 +144,7 @@
 	font-size: 9pt;
 	font-weight: bold;
 	border-bottom: 1px solid #FFFFFF;
-	background-color: #9CB9D0;
+	background-color: #CAC0D6;
 	color: #CCDAEA;
 	padding-left: 5px;
 	padding-top: 2px;
@@ -154,7 +154,7 @@
 }
 
 .msb .m1s {
-	background-color: #9CB9D0;
+	background-color: #CAC0D6;
 	padding-left: 5px;
 	padding-top: 2px;
 	padding-bottom: 2px;
@@ -162,7 +162,7 @@
 }
 
 .msb .m1s_l {
-	background-color: #9CB9D0;
+	background-color: #CAC0D6;
 	border-bottom: 1px solid #FFFFFF;
 }
 
@@ -178,7 +178,7 @@
 	font-size: 9pt;
 	font-weight: bold;
 	text-decoration : none;
-	color: #1E5C99;
+	color: #474156;
 }
 
 .msb .m1s A {
@@ -186,7 +186,7 @@
 	font-size: 9pt;
 	font-weight: bold;
 	text-decoration : none;
-	color: #1E5C99;
+	color: #474156;
 }
 
 /*
@@ -196,7 +196,7 @@
 .msb .m2 {
 	border-bottom: 1px solid #FFFFFF;
 	background-color: #CCDAEA;
-	color: #1E5C99;
+	color: #474156;
 	padding-left: 5px;
 }
 
@@ -221,7 +221,7 @@
 	font-size : 8pt;
 	font-weight: bold;
 	text-decoration : none;
-	color: #1E5C99;
+	color: #474156;
 }
 
 .msb .m2s A {
